[gd_scene load_steps=17 format=3 uid="uid://0pgakcp73di0"]

[ext_resource type="Script" path="res://scripts/growing_plot.gd" id="1_nu51t"]
[ext_resource type="AudioStream" uid="uid://dh4ukc82nuisl" path="res://assets/place-100513.mp3" id="3_dmmcw"]
[ext_resource type="Texture2D" uid="uid://btjxxhhudcnfs" path="res://assets/Carrots.png" id="3_r0d2c"]
[ext_resource type="AudioStream" uid="uid://c4g281x04t5ao" path="res://assets/rustling-grass-2-101283.mp3" id="4_knh1v"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jhgg7"]
load_path = "res://.godot/imported/Farm_Tiles.png-1a464e4fc57eccf732be1c8970acdb1e.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_sxyff"]
atlas = SubResource("CompressedTexture2D_jhgg7")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_eh18l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxyff")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_b4clo"]
atlas = ExtResource("3_r0d2c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_inoyu"]
atlas = ExtResource("3_r0d2c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap2p5"]
atlas = ExtResource("3_r0d2c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo2j6"]
atlas = SubResource("CompressedTexture2D_jhgg7")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnen5"]
atlas = SubResource("CompressedTexture2D_jhgg7")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tei18"]
atlas = SubResource("CompressedTexture2D_jhgg7")
region = Rect2(16, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_frhec"]
atlas = SubResource("CompressedTexture2D_jhgg7")
region = Rect2(32, 144, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d65h8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4clo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inoyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap2p5")
}],
"loop": true,
"name": &"carrot_growing",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo2j6")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnen5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tei18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frhec")
}],
"loop": true,
"name": &"wheat_growing",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i053t"]
size = Vector2(14, 14)

[node name="GrowingPlot" type="StaticBody2D"]
script = ExtResource("1_nu51t")

[node name="Land" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_eh18l")

[node name="Plant" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d65h8")
animation = &"none"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_i053t")

[node name="CropTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dmmcw")
bus = &"SFX"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_knh1v")
bus = &"SFX"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="timeout" from="CropTimer" to="." method="_on_crop_timer_timeout"]
